# QA_framework2

./: README.md
.GitHub/workspace/: ci_workflow1.yml
.github/workflows/: ci.yml  static.yml
API_Tests/: postman_collection.json  postman_environment.json
Bazel_gtest_unit_tests/: .bazelrc  MODULE.bazel  README.md  WORKSPACE  docker-compose.yml
Bazel_gtest_unit_tests/src/: BUILD  math_utils.h
Bazel_gtest_unit_tests/tests/: BUILD  math_utils_test.cpp
Bazel_gtest_unit_tests/tools/: run_tests.bat
SQL/: validation_queries.sql
UI_Tests/: pom.xml
UI_Tests/src/test/java/base/: BaseTest.java
UI_Tests/src/test/java/pages/: LoginPage.java
UI_Tests/src/test/java/tests/: LoginTest.java
Unit_tests_gtest/: CMakeLists.txt
Unit_tests_gtest/scripts/: run_tests.bat  run_tests.sh
Unit_tests_gtest/tests/: test_math_utils.cpp
